<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_progress">

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.godspeed.un_toxic.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.godspeed.un_toxic.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.godspeed.un_toxic.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_tips" />

</navigation>