<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutLoadingProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/pro" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/authCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_phone_no"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColorHint="#121212"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/get_otp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_otp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_otp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#121212"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="314dp" />
                <Button
                    android:id="@+id/verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/auth_progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>