<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateprofile">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="252dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="start|center_vertical"
                    android:hint="@string/etn"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"

                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.274"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/Number"
                    android:layout_width="252dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="start|center_vertical"
                    android:hint="@string/entp"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:minHeight="48dp"

                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.215"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/numbersm"
                    android:layout_width="252dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_no"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="252dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="start|center_vertical"
                    android:hint="@string/pricepersm"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"

                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.221"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/submitbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/update_btn"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>